force-app/main/default/objects/Channel_Compensation__c/Channel_Compensation__c.object-meta.xml
<CustomObject>
    <description>This object is intended to hold data from our financials system for compensation purposes and integrate with xactly external tool</description>
    <label>Training Revenue</label>
    <nameField>
        <displayFormat>CHNC{0000000000}</displayFormat>
        <label>Channel Compensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>