force-app/main/default/objects/Channel_Compensation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Revenue</relationshipLabel>
    <relationshipName>Training_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>