force-app/main/default/objects/Channel_Compensation__c/fields/BATCH_Id__c.field-meta.xml
<CustomField>
    <fullName>BATCH_Id__c</fullName>
    <label>BATCH Id</label>
    <type>Date</type>
</CustomField>