force-app/main/default/objects/Channel_Compensation__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <description>Day of month</description>
    <formula>Day( BATCH_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>