force-app/main/default/objects/Channel_Compensation__c/fields/DWH_ID__c.field-meta.xml
<CustomField>
    <fullName>DWH_ID__c</fullName>
    <externalId>true</externalId>
    <label>DWH ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>