force-app/main/default/objects/Channel_Compensation__c/fields/FI_Zip_Formula__c.field-meta.xml
<CustomField>
    <fullName>FI_Zip_Formula__c</fullName>
    <formula>Fulfillment_Item__r.Zip_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FI Zip Formula</label>
    <type>Text</type>
</CustomField>