force-app/main/default/objects/Channel_Compensation__c/fields/Fiscal_Month_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month_Abbr__c</fullName>
    <label>Fiscal Month Abbr</label>
    <length>3</length>
    <type>Text</type>
</CustomField>