force-app/main/default/objects/Channel_Compensation__c/fields/Fiscal_Month_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month_Numeric__c</fullName>
    <description>Conversion of Calendar month to Fiscal Month</description>
    <formula>CASE(  MONTH( BATCH_Id__c ) ,
1,7,
2,8,
3,9,
4,10,
5,11,
6,12,
7,1,
8,2,
9,3,
10,4,
11,5,
12,6,
NULL)</formula>
    <label>Fiscal Month Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>