force-app/main/default/objects/Channel_Compensation__c/fields/FOCIS_Category__c.field-meta.xml
<CustomField>
    <fullName>FOCIS_Category__c</fullName>
    <label>PSC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>