force-app/main/default/objects/Channel_Compensation__c/fields/Focis_Location__c.field-meta.xml
<CustomField>
    <fullName>Focis_Location__c</fullName>
    <label>BGST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>