force-app/main/default/objects/Channel_Compensation__c/fields/Focis_Program__c.field-meta.xml
<CustomField>
    <fullName>Focis_Program__c</fullName>
    <label>Product 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>