force-app/main/default/objects/Channel_Compensation__c/fields/FOCIS_Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>FOCIS_Subject_Area__c</fullName>
    <label>Product SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>