force-app/main/default/objects/Channel_Compensation__c/fields/Fulfillment_Item__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The transaction item the Training Revenue record is based on</description>
    <inlineHelpText>The transaction item the Training Revenue record is based on</inlineHelpText>
    <label>Fulfillment Item</label>
    <referenceTo>Fulfillment_Item__c</referenceTo>
    <relationshipLabel>Training Revenue</relationshipLabel>
    <relationshipName>Training_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>