force-app/main/default/objects/Channel_Compensation__c/fields/Has_Matching_State__c.field-meta.xml
<CustomField>
    <fullName>Has_Matching_State__c</fullName>
    <formula>IF( Fulfillment_Item__r.State_Formula__c =  State__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Matching State</label>
    <type>Text</type>
</CustomField>