force-app/main/default/objects/Channel_Compensation__c/fields/Has_Matching_Zip__c.field-meta.xml
<CustomField>
    <fullName>Has_Matching_Zip__c</fullName>
    <formula>IF( Fulfillment_Item__r.Zip_Formula__c  =  FI_Zip_Formula__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Matching Zip?</label>
    <type>Text</type>
</CustomField>