force-app/main/default/objects/Channel_Compensation__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <description>Possible Types: AP, FS, CO, LTP</description>
    <label>Org Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>