force-app/main/default/objects/Channel_Compensation__c/fields/Registration_Count__c.field-meta.xml
<CustomField>
    <fullName>Registration_Count__c</fullName>
    <label>Registration Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>