force-app/main/default/objects/Channel_Compensation__c/fields/Sales_Module__c.field-meta.xml
<CustomField>
    <fullName>Sales_Module__c</fullName>
    <label>Sales Module</label>
    <length>20</length>
    <type>Text</type>
</CustomField>