force-app/main/default/objects/Channel_Compensation__c/fields/SubPG__c.field-meta.xml
<CustomField>
    <fullName>SubPG__c</fullName>
    <label>Product 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>