force-app/main/default/objects/Channel_Compensation__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipName>Channel_Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>