force-app/main/default/objects/Channel_Compensation__c/fields/Transaction_Amt__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amt__c</fullName>
    <label>Transaction Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>