force-app/main/default/objects/Channel_Compensation__c/fields/YoY_Comparison_Date__c.field-meta.xml
<CustomField>
    <fullName>YoY_Comparison_Date__c</fullName>
    <formula>BATCH_Id__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Future YoY comparison date for MTD YoY Analytics</inlineHelpText>
    <label>YoY Comparison Date</label>
    <type>Date</type>
</CustomField>